--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
           extra_nix_config: experimental-features = nix-command flakes
       - uses: cachix/cachix-action@v10
         with:
-          name: mbpnix
+          name: mbpnix2105
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel -L
