--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   environment:
     name: Build Configuration
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         host:
